# NanoTracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/AABB/: AABB.h
include/BVH/: BVH.h
include/Camera/: Camera.h
include/Material/: Dielectric.h  Lambertian.h  Material.h  Metal.h
include/Ray/: Ray.h
include/Shape/: MovingSphere.h  Shape.h  ShapeList.h  Sphere.h  World.h
include/Sphere/: Sphere.h
include/Texture/: CheckerTexture.h  Texture.h
include/math/: Vec3.h  Vec3.hpp
include/stb_image/: stb_image.h  stb_image_write.h
include/utility/: utility.h
lib/: stb_image.lib
src/: CMakeLists.txt
src/AABB/: AABB.cpp  CMakeLists.txt
src/BVH/: BVH.cpp  CMakeLists.txt
src/Camera/: CMakeLists.txt  Camera.cpp
src/Material/: CMakeLists.txt  Dielectric.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
src/Ray/: CMakeLists.txt  Ray.cpp
src/Shape/: CMakeLists.txt  MovingSphere.cpp  Shape.cpp  ShapeList.cpp  Sphere.cpp  World.cpp
src/Sphere/: CMakeLists.txt  Sphere.cpp
src/Texture/: CMakeLists.txt  Texture.cpp
src/math/: CMakeLists.txt  Vec3.cpp
src/stb_image/: CMakeLists.txt  stb_image.cpp
src/utility/: CMakeLists.txt  Color.cpp  utility.cpp
